--- a/two/three.html
+++ b/two/three.html
@@ -6,15 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1>Hello Beautiful</h1>
     <button id="stop">Stop</button>
     <button id="start">Start</button>
 </body>
-<script>
-    const saydate=function(str){
-        console.log(str,Date.UTC);
-    }
-    const interid= setInterval(saydate,1000,"hi")
-    //clearInterval(interid);
+<script src="cc.js">
+   
 </script>
 </html>
